login confirmation done and some changes in config files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center; color:purple">
+<div style="text-align:center;">
   <h1>
     Welcome to <span style="color:black">{{app}}</span> end-to-end automation testing application!
   </h1>
   <img id="bg" src="assets/tix-logo.png">
+  <a href="/src/target/screenshots/tradeix-e2e-report.html" target="_blank" class="button btnBlueGreen">View Last Automation Log</a>
 </div>
