--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,27 @@
 #bg {
     background-repeat:no-repeat;
     background-position: center center;
-    background-color: lightseagreen;
     width: 900px;
     height: 450px;
+}
+a.button {
+  display: block;
+  position: center;
+  float: center;
+  width: 260px;
+  padding: 0;
+  margin: 10px 20px 10px 0;
+  font-weight: 600;
+  text-align: center;
+  line-height: 50px;
+  color: #FFF;
+  border-radius: 5px;
+  transition: all 0.2s ;
+  text-decoration: none;
+}
+.btnBlueGreen {
+  background: #00AE68;
+}
+.btnBlueGreen:hover {
+  background: #21825B;
 }
