--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,8 @@
     Welcome to <span style="color:black">{{app}}</span> end-to-end automation testing application!
   </h1>
   <img id="bg" src="assets/tix-logo.png">
-  <a href="/src/target/screenshots/tradeix-e2e-report.html" target="_blank" class="button btnBlueGreen">View Last Automation Log</a>
+  <a class="button btnBlueGreen" (click)="reportShowHide = !reportShowHide">View Last Automation Log</a>
+</div>
+<div class="report-details" *ngIf="reportShowHide">
+  <html-report></html-report>
 </div>
